# speedtype

./: .gitmodules  CMakeLists.txt  README.md  run.sh
.zed/: debug.json  tasks.json
data/config/: settings_defaults.json
data/content/: achievements.json  games.json  lessons.json  tips.json
data/user/: progress.json
engine/: Entity.hpp  HotReload.cpp  HotReload.hpp  RenderSystem.cpp  RenderSystem.hpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp  SceneManager.cpp  SceneManager.hpp  World.hpp
scenes/: home.json  lesson_01.json
src/: Game.cpp  Game.hpp  HomeScene.cpp  HomeScene.hpp  Lesson.hpp  LessonScene.cpp  LessonScene.hpp  Renderer.cpp  Renderer.hpp  TypingEngine.cpp  TypingEngine.hpp  TypingEntity.cpp  TypingEntity.hpp  TypingGame.cpp  TypingGame.hpp  main.cpp
